--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@ h1 {
 }
 
 p {
-  text-align: center;
   color: white;
   font-size: 15px;
 }
@@ -115,9 +114,6 @@ button:hover {
   display: flex;
 }
 
-.info-square{
-
-}
 
 .specific-weather{
   color: #d1d1d1;
@@ -162,4 +158,11 @@ button:hover {
 
 .forecast-day p {
   font-size: 16px;
+  text-wrap-style: balance;
 }
+
+p.main-weather-info{
+  font-size: 20px;
+  font-style: italic;
+}
+
